# octopus

./: .gitignore  CMakeLists.txt
cmake/: EnableCXX11.cmake  EnableWarnings.cmake  UseDoxygen.cmake
doc/: CMakeLists.txt  Doxyfile.in
include/: CSVExporter.h  CVSExporter.h  DBUtil.h  abstractdataseries.h  common.h  databaseadapter.h  dataprovider.h  doubleseries.h  exporter.h  exporterfactory.h  exporthandler.h  mainwindow.h  measure.h  metadata.h  networkadapter.h  plotsettings.h  recorder.h  serializable.h  sqlite.h  stringseries.h  timemanager.h  value.h  viewmanager.h  visitor.h
include/common/: measure.h  metadata.h  plotsettings.h  visitor.h
include/datamodel/: DBUtil.h  abstractdataseries.h  databaseadapter.h  dataprovider.h  doubleseries.h  sqlite.h  stringseries.h
include/dialogs/: plotsettingsdialog.h  sourcedialog.h
include/export/: CSVExporter.h  exporter.h  exporterfactory.h  exporthandler.h
include/gui/: TrackHolder.h  cursor.h  discretegraph.h  graph.h  interpolatinggraph.h  mainview.h  plotsettingsdialog.h  presentationarea.h  presentationitem.h  qcustomplot.h  recordselection.h  selection.h  sourcedialog.h  startscreen.h  timeline.h  timescrollbar.h  track.h  trackscene.h
include/main/: mainwindow.h  startscreen.h  viewmanager.h
include/mainview/: cursor.h  presentationarea.h  recordselection.h  selection.h  timeline.h  timescrollbar.h
include/mainview/tracks/: discretegraph.h  graph.h  interpolatinggraph.h  qcustomplot.h  track.h
include/network/: networkadapter.h
include/record/: recorder.h
include/time/: timemanager.h
rc/: resources.qrc
source/: .gitignore
source/Octopus/: Octopus.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui-old  ressources.qrc
source/Octopus/gui/: exampletrack.cpp  exampletrack.h  presentationarea.cpp
src/: CSVExporter.cpp  CVSExporter.cpp  Octopus.pro  abstractdataseries.cpp  abstractdataseries.h  common.h  databaseadapter.cpp  dataprovider.cpp  dataprovider.h  doubleseries.cpp  doubleseries.h  exporterfactory.cpp  exporthandler.cpp  main.cpp  mainwindow.cpp  mainwindow.h  networkadapter.cpp  plotsettings.cpp  recorder.cpp  sqlite.cpp  stringseries.cpp  stringseries.h  timemanager.cpp  value.cpp  value.h  viewmanager.cpp
src/common/: plotsettings.cpp  value.cpp
src/datamodel/: abstractdataseries.cpp  databaseadapter.cpp  dataprovider.cpp  doubleseries.cpp  sqlite.cpp  stringseries.cpp
src/dialogs/: plotsettingsdialog.cpp  sourcedialog.cpp
src/export/: CSVExporter.cpp  exporterfactory.cpp  exporthandler.cpp
src/gui/: TrackHolder.cpp  cursor.cpp  cursor.h  discretegraph.cpp  exampletrack.cpp  exampletrack.h  graph.cpp  interpolatinggraph.cpp  mainview.cpp  mainview.h  plotsettingsdialog.cpp  presentationarea.cpp  presentationarea.h  presentationitem.cpp  presentationitem.h  qcustomplot.cpp  recordselection.cpp  selection.cpp  selection.h  sourcedialog.cpp  startscreen.cpp  timeline.cpp  timeline.h  timescrollbar.cpp  track.cpp  track.h  trackscene.cpp  trackscene.h
src/main/: main.cpp  mainwindow.cpp  startscreen.cpp  viewmanager.cpp
src/mainview/: cursor.cpp  presentationarea.cpp  recordselection.cpp  selection.cpp  timeline.cpp  timescrollbar.cpp
src/mainview/tracks/: discretegraph.cpp  interpolatinggraph.cpp  qcustomplot.cpp  track.cpp
src/network/: networkadapter.cpp
src/record/: recorder.cpp
src/time/: timemanager.cpp
test/: sample.cpp
ui/: mainwindow.ui  plotsettingsdialog.ui  sourcedialog.ui  startscreen.ui  track.ui
